1.23.2
------
(RB=353147)
RestliRequestUriSignature: Handle assocKey for FindRequest and GetAllRequest.
MockActionResponseFactory: Add option to support dynamic schema, such as CollectionResponse.

1.23.1
------
(RB=348277)
Deprecate RestliProtocolCheck.

1.23.0
------
(RB=347094)
change getPartitionInformation so the ordering of the server will be consistent for identical hashrings

(RB=349490)
Add RestliRequestUriSignature, A summary object for the URI of a Rest.li Request.
Add MockActionResponseFactory for mocking ActionResponse.

1.22.0
------
(RB=346821)
allows client to change r2 client pool waiter size

(RB=344020)
Adding logic to throw exception if BatchGetRequestBuilder.batch methods are called for requests with Compound or Complex Keys.

1.21.2
------
(RB=345140)
Unit test and the fix for the DegraderImpl rollver deadlock

1.21.1
------
(RB=339157)
Add new API to Ring: getIterator()

(RB=344866)
Fixing Java 7 Build.

(RB=337425)
Changing the protocol version to 1.0 in those places we want 1.0 instead of baseline such as deprecated code paths.

1.21.0
------
(RB=334824)
Add NPE check for removePartial in ZookeeperEphemeralStore

(RB=337296)
Fixing documentation handler to handle empty path and paths containing just "restli".

(RB=321440)
Throw an exception when getId is called on the response and the key is a complex or compound key.

(RB=341565)
make sure we always get consistent ordering of hashes from getPartitionInformation

(RB=342147)
Fix incorrect generated snapshot when a typerefed data schema has included schema.

1.20.0
------
(RB=319445)
Forbid ID header being directly accessed.

1.19.2
------
(RB=330658)
Add API to get multiple hosts from all partitions

(RB=327432)
remove checkPathValue from idl/snapshot backwards compatibility checks.
Paths are now expected to be identical.

(RB=324987)
Generated included unnamed union in the defining class.

(RB=326034)
Update PathKeys.

(RB=330531)
Fix bugs in ArgumentBuilder.

(RB=331140)